@@ -39,6 +39,14 @@ from conary.repository import changeset, filecontents
 ROLLBACK_PHASE_REPOS = 1
 ROLLBACK_PHASE_LOCAL = 2
 
+def conaryContents(hasCapsule, pathId, fileObj):
+    if pathId == trove.CAPSULE_PATHID:
+        return False
+
+    return (fileObj.flags.isCapsuleOverride() or
+            fileObj.flags.isConfig() or
+            not hasCapsule)
+
 class UpdateFlags(util.Flags):
 
     """
@@ -737,6 +745,7 @@ class FilesystemJob:
         fileList = [ ((pathId,) + baseTrove.getFile(pathId)[1:])
                         for pathId in troveCs.getOldFileList() ]
         fileObjs = repos.getFileVersions(fileList)
+        hasCapsule = troveCs.hasCapsule()
 
 	for pathId, oldFile in itertools.izip(troveCs.getOldFileList(), 
                                               fileObjs):
@@ -744,6 +753,10 @@ class FilesystemJob:
                 # this file was removed with 'conary remove /path', so
                 # nothing more has to be done
 		continue
+            elif not conaryContents(hasCapsule, pathId, oldFile):
+                # files which are in capsules are handled by the underlying
+                # capsule implementation
+                continue
 
 	    (path, fileId, version) = baseTrove.getFile(pathId)
 
@@ -797,7 +810,9 @@ class FilesystemJob:
         finalPath = fsPath
         pathOkay = True
         # if headPath is none, the name hasn't changed in the repository
-        if headPath and headPath != fsPath:
+        if pathId == trove.CAPSULE_PATHID:
+            return pathOkay, headPath
+        elif headPath and headPath != fsPath:
             # the paths are different; if one of them matches the one
             # from the old trove, take the other one as it is the one
             # which changed
@@ -942,6 +957,7 @@ class FilesystemJob:
             scriptList.append((s, action))
 
         job = troveCs.getJob()
+        hasCapsule = troveCs.hasCapsule()
         newCompatClass = troveCs.getNewCompatibilityClass()
         for (s, action) in scriptList:
             self.postScripts.append((job, baseCompatClass,
@@ -970,6 +986,10 @@ class FilesystemJob:
             if headPath in pathsMoved:
                 # this file looks new, but it's actually moved over from
                 # another trove. treat it as an update later on.
+                continue
+
+            if (not conaryContents(hasCapsule, pathId, headFile)):
+                # capsule management is responsible for restoring this file
                 continue
 
             if isSrcTrove:
@@ -1235,6 +1255,10 @@ class FilesystemJob:
             else:
                 headFile = self._mergeFile(baseFile, headFileId, headChanges,
                                            pathId)
+
+            if (not conaryContents(hasCapsule, pathId, headFile)):
+                # capsule management is responsible for restoring this file
+                continue
 
             # final path is the path to use w/o the root
             # real path is the path to use w/ the root
@@ -1742,14 +1766,16 @@ class FilesystemJob:
             self.oldTroves.append((name, oldVersion, oldFlavor))
             oldTrove = db.getTrove(name, oldVersion, oldFlavor, 
                                    pristine = False)
-            if self.capsules.remove(oldTrove):
-                continue
+            self.capsules.remove(oldTrove)
+            # and True forces hasCapsule to be a boolean
+            hasCapsule = (oldTrove.troveInfo.capsule.type() and True)
 
             fileList = [ (x[0], x[2], x[3]) for x in oldTrove.iterFileList() ]
             fileObjs = db.getFileVersions(fileList)
             for (pathId, path, fileId, version), fileObj in \
                     itertools.izip(oldTrove.iterFileList(), fileObjs):
-                if path not in pathsMoved:
+                if (conaryContents(hasCapsule, pathId, fileObj) and
+                    path not in pathsMoved):
                     self._remove(fileObj, path, util.joinPaths(root, path),
                                  "removing %s")
             # We catch removals here
@@ -1765,8 +1791,7 @@ class FilesystemJob:
         troveList = []
 
 	for troveCs in changeSet.iterNewTroveList():
-            if self.capsules.install(flags, troveCs):
-                continue
+            self.capsules.install(flags, troveCs)
 
             old = troveCs.getOldVersion()
 	    if old:
