@@ -3335,6 +3335,12 @@ class AbstractTroveChangeSet(streams.StreamSet):
     def getFrozenTroveInfo(self):
         return self.absoluteTroveInfo()
 
+    def hasCapsule(self):
+        troveInfo = self.absoluteTroveInfo()
+        capsuleType = TroveInfo.find(_TROVEINFO_TAG_CAPSULE,
+                                     troveInfo)
+        return (capsuleType and capsuleType.type())
+
     def getFrozenExtendedMetadata(self):
         return self.extendedMetadata()
 
